# oxidizedMCP

./: .gitignore  .local-ci.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  dockworker.toml
.github/workflows/: ci.yml
crates/oxidized-mcp/: Cargo.toml
crates/oxidized-mcp-core/: Cargo.toml
crates/oxidized-mcp-core/src/: auth.rs  lib.rs  local_runner.rs  mcp_types.rs  proxy.rs  registry.rs  router.rs  test_helpers.rs
crates/oxidized-mcp/src/: health.rs  main.rs  preset.rs  stdio.rs
docs/: DESIGN.md  TDD_REVISED.md  UNIFIED_MCP_SETUP.md  code_review_report.md
examples/echo-skill/: Cargo.toml  dockworker.toml
examples/echo-skill/src/: main.rs
registry/: skills.example.yaml  skills.yaml
