[workspace]
resolver = "2"
members = [
    "crates/oxidized-mcp-core",
    "crates/oxidized-mcp",
    "examples/echo-skill",
]
default-members = ["crates/oxidized-mcp"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Steven Irvin <stevei101@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/stevedores-org/oxidizedMCP"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
oxidized-mcp-core = { path = "crates/oxidized-mcp-core" }
