[package]
name = "echo-skill"
description = "Minimal HTTP MCP skill for oxidizedMCP local development"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "echo-skill"
path = "src/main.rs"

[dependencies]
axum.workspace = true
oxidized-mcp-core = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
